--- a/index.html
+++ b/index.html
@@ -8,7 +8,18 @@
 
   <body>
     <div class="header">
-      
+      <div>
+        My Site
+      </div>
+      <nav>
+        <ul class="nov-list">
+          <li class="nov-list-item">
+            <a href="index.html">Home</a>
+          </li>
+          <li class="nov-list-item">About</li>
+          <li class="nov-list-item">Topic</li>
+        </ul>
+      </nav>
     </div>
     <div class="main">
       
